force-app/main/default/objects/Contact/fields/Referrer_Rating__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Rating__c</fullName>
    <label>Referrer Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue</fullName>
                <default>true</default>
                <label>Blue</label>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>