force-app/main/default/objects/Contact/fields/Referrer_Status__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Status__c</fullName>
    <label>Referrer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>