force-app/main/default/objects/Contact/fields/Referrers_Amount__c.field-meta.xml
<CustomField>
    <fullName>Referrers_Amount__c</fullName>
    <label>Referrers Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>