force-app/main/default/objects/Contact/fields/Rental_Managed_via__c.field-meta.xml
<CustomField>
    <fullName>Rental_Managed_via__c</fullName>
    <label>Rental Managed via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Real estate agent</fullName>
            </value>
            <value>
                <fullName>Privately</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>