force-app/main/default/objects/Contact/fields/Rental_or_Board_paid__c.field-meta.xml
<CustomField>
    <fullName>Rental_or_Board_paid__c</fullName>
    <label>Rental or Board paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>