force-app/main/default/objects/Contact/fields/resident_of_country__c.field-meta.xml
<CustomField>
    <fullName>resident_of_country__c</fullName>
    <label>resident of country</label>
    <type>TextArea</type>
</CustomField>