force-app/main/default/objects/Contact/fields/Residential_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Residential_Address_1__c</fullName>
    <label>Residential Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>