force-app/main/default/objects/Contact/fields/Residential_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Residential_Address_2__c</fullName>
    <label>Residential Address</label>
    <type>TextArea</type>
</CustomField>