force-app/main/default/objects/Contact/fields/SecondaryCitizenship__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCitizenship__c</fullName>
    <label>Secondary Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>