force-app/main/default/objects/Contact/fields/SecondaryLanguage__c.field-meta.xml
<CustomField>
    <fullName>SecondaryLanguage__c</fullName>
    <label>Secondary Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Languages</valueSetName>
    </valueSet>
</CustomField>