force-app/main/default/objects/Contact/fields/Security_Question__c.field-meta.xml
<CustomField>
    <fullName>Security_Question__c</fullName>
    <label>Security Question</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mothers maiden name</fullName>
            </value>
            <value>
                <fullName>First street you lived in</fullName>
            </value>
            <value>
                <fullName>First pet’s name</fullName>
            </value>
            <value>
                <fullName>Occupation you wanted to be when you were a child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>