force-app/main/default/objects/Contact/fields/smagicinteract__SMSOptOut__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMSOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field contains the value to mark the contact as OptOut.</description>
    <label>SMS Opt Out</label>
    <type>Checkbox</type>
</CustomField>