force-app/main/default/objects/Contact/fields/Sports_Hobbies_and_Memberships__c.field-meta.xml
<CustomField>
    <fullName>Sports_Hobbies_and_Memberships__c</fullName>
    <label>Sports, Hobbies and Memberships</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>