force-app/main/default/objects/Contact/fields/spouse_s_approximate_annual_income__c.field-meta.xml
<CustomField>
    <fullName>spouse_s_approximate_annual_income__c</fullName>
    <label>spouse’s approximate annual income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>