force-app/main/default/objects/Contact/fields/State_2__c.field-meta.xml
<CustomField>
    <fullName>State_2__c</fullName>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>