force-app/main/default/objects/Contact/fields/Street_1__c.field-meta.xml
<CustomField>
    <fullName>Street_1__c</fullName>
    <label>Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>