force-app/main/default/objects/Contact/fields/Street_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Street_Number_1__c</fullName>
    <label>Street Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>