force-app/main/default/objects/Contact/fields/Suburb_2__c.field-meta.xml
<CustomField>
    <fullName>Suburb_2__c</fullName>
    <label>Suburb</label>
    <length>100</length>
    <type>Text</type>
</CustomField>