force-app/main/default/objects/Contact/fields/Tax_File_Number_TFN__c.field-meta.xml
<CustomField>
    <fullName>Tax_File_Number_TFN__c</fullName>
    <label>Tax File Number (TFN)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>