force-app/main/default/objects/Contact/fields/Tax_Identification_Number_TIN__c.field-meta.xml
<CustomField>
    <fullName>Tax_Identification_Number_TIN__c</fullName>
    <label>Tax Identification Number (TIN)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>