force-app/main/default/objects/Contact/fields/Tax_Resident_of_countries__c.field-meta.xml
<CustomField>
    <fullName>Tax_Resident_of_countries__c</fullName>
    <label>Tax Resident of countries</label>
    <length>60</length>
    <type>Text</type>
</CustomField>