force-app/main/default/objects/Contact/fields/Total_Living_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Living_Expenses__c</fullName>
    <label>Total Living Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>