force-app/main/default/objects/Contact/fields/Total_non_property_assets__c.field-meta.xml
<CustomField>
    <fullName>Total_non_property_assets__c</fullName>
    <label>Total_non_property_assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>