force-app/main/default/objects/Contact/fields/Transport_Public_Petrol_Registration__c.field-meta.xml
<CustomField>
    <fullName>Transport_Public_Petrol_Registration__c</fullName>
    <label>Transport Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>