force-app/main/default/objects/Contact/fields/Unit_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number_2__c</fullName>
    <label>Unit Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>