force-app/main/default/objects/Contact/fields/UnitNo_Street_StreetNo__c.field-meta.xml
<CustomField>
    <fullName>UnitNo_Street_StreetNo__c</fullName>
    <formula>Unit_Number__c +&apos; &apos;+ Street_Number__c +&apos; &apos;+ Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UnitNo Street StreetNo</label>
    <type>Text</type>
</CustomField>