force-app/main/default/objects/Contact/fields/Utilities__c.field-meta.xml
<CustomField>
    <fullName>Utilities__c</fullName>
    <label>Owner Occupied Property Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>