force-app/main/default/objects/Contact/fields/Visa_Details__c.field-meta.xml
<CustomField>
    <fullName>Visa_Details__c</fullName>
    <label>Visa Details</label>
    <type>TextArea</type>
</CustomField>