force-app/main/default/objects/Contact/fields/voi_Email_Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>voi_Email_Verification_Code__c</fullName>
    <label>voi Email Verification Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>