force-app/main/default/objects/Contact/fields/VOI_stages__c.field-meta.xml
<CustomField>
    <fullName>VOI_stages__c</fullName>
    <label>VOI stages</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Front DL</fullName>
            </value>
            <value>
                <fullName>Back DL</fullName>
            </value>
            <value>
                <fullName>Video Recording</fullName>
            </value>
            <value>
                <fullName>CPQ sign</fullName>
            </value>
            <value>
                <fullName>TMCU sign</fullName>
            </value>
            <value>
                <fullName>Error Page</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Front DL Preview</fullName>
            </value>
            <value>
                <fullName>Back DL Preview</fullName>
            </value>
            <value>
                <fullName>Video Preview</fullName>
            </value>
            <value>
                <fullName>DL Uploaded</fullName>
            </value>
            <value>
                <fullName>video mike Error</fullName>
            </value>
            <value>
                <fullName>Video Uploaded</fullName>
            </value>
            <value>
                <fullName>PDF generated</fullName>
            </value>
            <value>
                <fullName>Email Sent To customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>