force-app/main/default/objects/Contact/fields/VOI_type__c.field-meta.xml
<CustomField>
    <fullName>VOI_type__c</fullName>
    <label>VOI type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FULL</fullName>
                <default>true</default>
                <label>FULL</label>
            </value>
            <value>
                <fullName>VOI</fullName>
            </value>
            <value>
                <fullName>E-SIGN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>