force-app/main/default/objects/Contact/fields/WeddingAnniversary__c.field-meta.xml
<CustomField>
    <fullName>WeddingAnniversary__c</fullName>
    <description>Date of wedding anniversary.</description>
    <label>Wedding Anniversary</label>
    <type>Date</type>
</CustomField>