force-app/main/default/objects/Contact/fields/What_is_spouse_s_primary_income_source__c.field-meta.xml
<CustomField>
    <fullName>What_is_spouse_s_primary_income_source__c</fullName>
    <label>What is spouse&apos;s primary income source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent ongoing employment</fullName>
            </value>
            <value>
                <fullName>Casual or temporary employment</fullName>
            </value>
            <value>
                <fullName>Self employed</fullName>
            </value>
            <value>
                <fullName>Centrelink</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>