force-app/main/default/objects/Contact/fields/Year_2__c.field-meta.xml
<CustomField>
    <fullName>Year_2__c</fullName>
    <label>Year</label>
    <length>3</length>
    <type>Text</type>
</CustomField>