force-app/main/default/objects/Contact/recordTypes/Referrer.recordType-meta.xml
<RecordType>
    <fullName>Referrer</fullName>
    <active>true</active>
    <label>Referrer</label>
</RecordType>