force-app/main/default/objects/Contact/validationRules/FinServ__CannotHaveMoreThanOnePrimaryAddress.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotHaveMoreThanOnePrimaryAddress</fullName>
    <active>true</active>
    <description>Only one address can be designated as the primary address.</description>
    <errorConditionFormula>IF(IF(PrimaryAddressIsMailing__c,1,0) + IF(PrimaryAddressIsOther__c,1,0)+  IF(PrimaryAddressIsBilling__c,1,0)+ IF(PrimaryAddressIsShipping__c,1,0)&gt;1,true,false)</errorConditionFormula>
    <errorMessage>Only one address can be designated as the primary address.</errorMessage>
</ValidationRule>