force-app/main/default/objects/Contact/validationRules/FinServ__IndividualCannotHaveMoreThanOneContact.validationRule-meta.xml
<ValidationRule>
    <fullName>IndividualCannotHaveMoreThanOneContact</fullName>
    <active>false</active>
    <description>Error message when adding more than one contact to an individual account</description>
    <errorConditionFormula>1!=1</errorConditionFormula>
    <errorMessage>The selected account has an Individual record type and can&apos;t have additional contacts associated with it</errorMessage>
</ValidationRule>