force-app/main/default/objects/Contact/validationRules/FinServ__NotAllowingConversionFromIndividual.validationRule-meta.xml
<ValidationRule>
    <fullName>NotAllowingConversionFromIndividual</fullName>
    <active>false</active>
    <errorConditionFormula>1!=1</errorConditionFormula>
    <errorMessage>The Individual record type can&apos;t be changed</errorMessage>
</ValidationRule>