force-app/main/default/objects/Contact/validationRules/FinServ__SingleReferredByEntryByRecord.validationRule-meta.xml
<ValidationRule>
    <fullName>SingleReferredByEntryByRecord</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
            ISBLANK(Account.ConversionDateTime__c), 
            AND( 
                NOT(ISBLANK(ReferredByUser__c)), 
                NOT(ISBLANK(ReferredByContact__c)) 
            ) 
        )</errorConditionFormula>
    <errorDisplayField>ReferredByContact__c</errorDisplayField>
    <errorMessage>Enter an internal referrer or an external referrer. You can list only one referrer for each referral.</errorMessage>
</ValidationRule>