force-app/main/default/objects/Contact/listViews/Lender_Agents.listView-meta.xml
<ListView>
    <fullName>Lender_Agents</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Lender</value>
    </filters>
    <label>Lender Agents</label>
</ListView>