force-app/main/default/objects/Contact/listViews/Platinum_Referrer_Contacts.listView-meta.xml
<ListView>
    <fullName>Platinum_Referrer_Contacts</fullName>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CONTACT.EMAIL_OPT_OUT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Referrer_Status__c</columns>
    <columns>Referrer_Rating__c</columns>
    <columns>Admin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Referrer</value>
    </filters>
    <filters>
        <field>Admin__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Referrer Contacts Admins</label>
</ListView>